[package]
name = "potential-giggle"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
chrono = "0.4.19"
rustls = "0.19.0"
webpki = "0.21.3"
webpki-roots = "0.21.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
x509-parser = "0.9.0"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
