[package]
name = "potential-giggle"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.38"
chrono = "0.4.19"
clap = "2.33.3"
crossbeam-utils = "0.8.1"
env_logger = "0.8.2"
log = "0.4.14"
num-format = "0.4.0"
rustls = "0.19.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
webpki = "0.21.3"
webpki-roots = "0.21.0"
x509-parser = "0.9.0"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
