[package]
name = "potential-giggle"
version = "1.0.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Check expiration date of SSL certificate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
crossbeam-utils = "0.8.1"
num-format = "0.4.0"
rustls = "0.19.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.61"
structopt = "0.3.21"
webpki = "0.21.3"
webpki-roots = "0.21.0"
x509-parser = "0.9.1"
