[package]
name = "potential-giggle-server"
version = "1.0.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Check expiration date of SSL certificate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
actix-web = "3.3.2"
env_logger = "0.8.3"
log = "0.4.14"
potential-giggle = { path = "../core" }
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.61"
structopt = "0.3.21"
