[package]
name = "potential-giggle-server"
version = "1.0.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Check expiration date of SSL certificate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.14"
potential-giggle = { path = "../core" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
structopt = "0.3.21"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
